Add showAllBooks and basic css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="utf-8">
   <title>Library</title>
   <link href="style.css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&display=swap" rel="stylesheet">
 </head>
 <body>
-
+  <h1>&#128214; My Library</h1>
+  <div id='container'> </div>
   <script src="script.js"></script>
 </body>
 </html>
