--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <h1>&#128214; My Library</h1>
   <div id='container'> </div>
   <script src="script.js"></script>
+  <button>NEW BOOK</button>
 </body>
 </html>
